tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/direct-expression-comma-assignmentexpression-0.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/expression-comma-assignmentexpression-0.case
// - src/assignment-target-type/invalid/direct.template
/*---
description: Static Semantics AssignmentTargetType, Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment

    Expression: Expression , AssignmentExpression
    Static Semantics AssignmentTargetType, Return invalid.

---*/

$DONOTEVALUATE();

(x, y = z) = 1;
